--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/LewisShim/kansong-metaverse-museum.github.io#readme",
   "dependencies": {
     "browserify": "^17.0.0",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "firebase": "^9.4.0",
     "http-server": "^14.1.1"
